[package]
name = "atm"
edition = "2024"

[dependencies]
bollard = "0.19"
clap = "4.5"
constcat = "0.6"
git2 = { version = "0.20", features = ["https", "ssh", "unstable"] }
indicatif = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.14"
thiserror = "2.0"
toml = "0.9"
tracing = "0.1"
tracing-indicatif = "0.3"
tracing-subscriber = "0.3"
url = "2.5"
uuid = { version = "1.18", features = ["v7", "rng"] }

[profile.release]
opt-level = 3
lto = "fat"
